# HalluDetect

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
benchmarks/: agentdojo_runner.py
configs/: default.yaml  safety_lenient.yaml  safety_strict.yaml
docs/: architecture.md  safety_score.md
scripts/: download_models.py  realtime_demo.py  run_pipeline.py  serve_mcp.py
src/halludetect/: __init__.py  cli.py  config.py  exceptions.py  logging_setup.py  pipeline.py  types.py
src/halludetect/extraction/: __init__.py  citation_aligner.py  entailment.py  srl.py  triplet_builder.py  uncertainty.py
src/halludetect/linkage/: __init__.py  deduper.py  field_weights.py  jaro_winkler.py  manifestation.py  rabin_karp.py
src/halludetect/retrieval/: __init__.py  base_agent.py  dpr.py  liveness_agent.py  mcp_server.py  parsing_agent.py  reasoning_agent.py  retrieval_agent.py
src/halludetect/retrieval/sources/: __init__.py  arxiv.py  crossref.py  pubmed.py  semantic_scholar.py
src/halludetect/scoring/: __init__.py  diagnostics.py  hrs.py  policy_gate.py  rewrite_engine.py
src/halludetect/security/: __init__.py  delimiters.py  melon.py  sentinel.py  threat_report.py  trajectory.py
src/halludetect/web/: __init__.py  server.py
src/halludetect/web/static/: app.js  index.html  style.css
tests/: conftest.py
tests/fixtures/sample_manuscripts/: benign_demo.py  draft.md
tests/integration/: test_pipeline_e2e.py
tests/unit/extraction/: test_extraction.py
tests/unit/linkage/: test_jaro_winkler.py  test_linkage.py  test_rabin_karp.py
tests/unit/retrieval/: test_parsing_agent.py  test_reasoning_agent.py
tests/unit/scoring/: test_scoring.py
tests/unit/security/: test_melon.py  test_sentinel.py  test_threat_report.py
